# brolm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
docs/: qwen35-vl.md
include/brolm/: alignment_adapter.h  clip.h  clip_image.h  clip_score.h  gemma2.h  gemma2_config.h  gemma_tokenizer.h  llama3_tokenizer.h  llm2vec.h  mistral3_config.h  mistral3_generate.h  mistral3_preprocessor.h  mistral3_projector.h  mistral3_text.h  mistral3_vision.h  mistral3_vl.h  mistral_tokenizer.h  nllb.h  nllb_config.h  qwen.h  qwen35_config.h  qwen35_preprocessor.h  qwen35_text.h  qwen35_tokenizer.h  qwen35_vision.h  qwen35_vl.h  qwen3vl_config.h  qwen3vl_preprocessor.h  qwen3vl_prompt.h  qwen3vl_text.h  qwen3vl_tokenizer.h  qwen3vl_vision.h  qwen3vl_vl.h  qwen_generate.h  qwen_tokenizer.h  t5.h  tokenizer.h  tokenizer_nllb.h  tokenizer_t5.h  version.h  (+1 more)
include/brolm/detail/: byte_level_bpe.h  compute.h  dense_decoder.h  device.h  generate.h  json.h  nllb_ops.h  profile.h  spm_bpe.h  spm_normalizer.h  spm_unigram.h  weights.h
scripts/: convert-llm2vec.py  download-llm2vec.sh  download_gemma2_2b.sh  download_mistral.ps1  download_mistral.sh  download_mistral_gguf.sh  download_qwen35.sh  download_qwen3_gguf.sh  download_qwen3_translate.sh  download_qwen3vl.sh  llm2vec_parity.sh  llm2vec_ref.py
src/: alignment_adapter.cpp  clip.cpp  clip_image.cpp  clip_score.cpp  gemma2.cpp  gemma2_config.cpp  gemma_tokenizer.cpp  llama3_tokenizer.cpp  llm2vec.cpp  mistral3_config.cpp  mistral3_generate.cpp  mistral3_preprocessor.cpp  mistral3_projector.cpp  mistral3_text.cpp  mistral3_vision.cpp  mistral3_vl.cpp  mistral_tokenizer.cpp  nllb.cpp  nllb_beam.cpp  nllb_config.cpp  nllb_decoder.cpp  nllb_encoder.cpp  qwen.cpp  qwen35_config.cpp  qwen35_preprocessor.cpp  qwen35_text.cpp  qwen35_tokenizer.cpp  qwen35_vision.cpp  qwen35_vl.cpp  qwen3vl_config.cpp  qwen3vl_prompt.cpp  qwen3vl_text.cpp  qwen3vl_tokenizer.cpp  qwen3vl_vision.cpp  qwen3vl_vl.cpp  qwen_generate.cpp  qwen_tokenizer.cpp  t5.cpp  tokenizer_clip.cpp  tokenizer_nllb.cpp  (+3 more)
src/detail/: byte_level_bpe.cpp  dense_decoder.cpp  generate.cpp  nllb_ops.cpp  profile.cpp  spm_bpe.cpp  spm_normalizer.cpp  spm_unigram.cpp
tests/: CMakeLists.txt  test_alignment_adapter.cpp  test_clip.cpp  test_clip_image.cpp  test_clip_score.cpp  test_compute.h  test_gemma2.cpp  test_gemma_tokenizer.cpp  test_llama3_tokenizer.cpp  test_llm2vec.cpp  test_mistral3_config.cpp  test_mistral3_generate.cpp  test_mistral3_gguf.cpp  test_mistral3_mmproj.cpp  test_mistral3_preprocessor.cpp  test_mistral3_projector.cpp  test_mistral3_text.cpp  test_mistral3_vision.cpp  test_mistral3_vl.cpp  test_mistral_tokenizer.cpp  test_nllb.cpp  test_nllb_beam.cpp  test_nllb_config.cpp  test_nllb_decoder.cpp  test_nllb_encoder.cpp  test_quantize_t5.cpp  test_qwen.cpp  test_qwen35_config.cpp  test_qwen35_preprocessor.cpp  test_qwen35_text.cpp  test_qwen35_tokenizer.cpp  test_qwen35_vision.cpp  test_qwen35_vl.cpp  test_qwen3vl_config.cpp  test_qwen3vl_preprocessor.cpp  test_qwen3vl_text.cpp  test_qwen3vl_tokenizer.cpp  test_qwen3vl_vision.cpp  test_qwen3vl_vl.cpp  test_qwen_generate.cpp  (+9 more)
tools/: CMakeLists.txt  bench_decode.cpp  llm2vec_encode.cpp  run_mistral_image.cpp  run_mistral_text.cpp  run_nllb_translate.cpp  run_qwen35_image.cpp
