function(brolm_add_test name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE brolm)
    if(MSVC)
        target_compile_options(${name} PRIVATE /W4)
    else()
        target_compile_options(${name} PRIVATE -Wall -Wextra)
    endif()
    add_test(NAME ${name} COMMAND ${name})
endfunction()

brolm_add_test(brolm_test_smoke test_smoke.cpp)
brolm_add_test(brolm_test_tokenizer_clip test_tokenizer_clip.cpp)
brolm_add_test(brolm_test_tokenizer_t5   test_tokenizer_t5.cpp)
brolm_add_test(brolm_test_qwen_tokenizer test_qwen_tokenizer.cpp)
brolm_add_test(brolm_test_clip           test_clip.cpp)
brolm_add_test(brolm_test_t5             test_t5.cpp)
brolm_add_test(brolm_test_quantize_t5    test_quantize_t5.cpp)
brolm_add_test(brolm_test_clip_image     test_clip_image.cpp)
brolm_add_test(brolm_test_clip_score     test_clip_score.cpp)
brolm_add_test(brolm_test_qwen           test_qwen.cpp)
brolm_add_test(brolm_test_qwen_generate  test_qwen_generate.cpp)
brolm_add_test(brolm_test_alignment_adapter test_alignment_adapter.cpp)
brolm_add_test(brolm_test_qwen35_config     test_qwen35_config.cpp)
brolm_add_test(brolm_test_qwen35_tokenizer  test_qwen35_tokenizer.cpp)
brolm_add_test(brolm_test_qwen35_preprocessor test_qwen35_preprocessor.cpp)
brolm_add_test(brolm_test_qwen35_vision       test_qwen35_vision.cpp)
brolm_add_test(brolm_test_qwen35_text         test_qwen35_text.cpp)
brolm_add_test(brolm_test_qwen35_vl            test_qwen35_vl.cpp)
