add_executable(brolm_run_qwen35_image run_qwen35_image.cpp)
target_link_libraries(brolm_run_qwen35_image PRIVATE brolm)
if(MSVC)
    target_compile_options(brolm_run_qwen35_image PRIVATE /W4)
else()
    target_compile_options(brolm_run_qwen35_image PRIVATE -Wall -Wextra)
endif()

add_executable(brolm_run_mistral_text run_mistral_text.cpp)
target_link_libraries(brolm_run_mistral_text PRIVATE brolm)
if(MSVC)
    target_compile_options(brolm_run_mistral_text PRIVATE /W4)
else()
    target_compile_options(brolm_run_mistral_text PRIVATE -Wall -Wextra)
endif()

add_executable(brolm_bench_decode bench_decode.cpp)
target_link_libraries(brolm_bench_decode PRIVATE brolm)
if(MSVC)
    target_compile_options(brolm_bench_decode PRIVATE /W4)
else()
    target_compile_options(brolm_bench_decode PRIVATE -Wall -Wextra)
endif()

add_executable(brolm_run_mistral_image run_mistral_image.cpp)
target_link_libraries(brolm_run_mistral_image PRIVATE brolm)
if(MSVC)
    target_compile_options(brolm_run_mistral_image PRIVATE /W4)
else()
    target_compile_options(brolm_run_mistral_image PRIVATE -Wall -Wextra)
endif()

add_executable(brolm_run_nllb_translate run_nllb_translate.cpp)
target_link_libraries(brolm_run_nllb_translate PRIVATE brolm)
if(MSVC)
    target_compile_options(brolm_run_nllb_translate PRIVATE /W4)
else()
    target_compile_options(brolm_run_nllb_translate PRIVATE -Wall -Wextra)
endif()

add_executable(brolm_llm2vec_encode llm2vec_encode.cpp)
target_link_libraries(brolm_llm2vec_encode PRIVATE brolm)
if(MSVC)
    target_compile_options(brolm_llm2vec_encode PRIVATE /W4)
else()
    target_compile_options(brolm_llm2vec_encode PRIVATE -Wall -Wextra)
endif()
